ok spacing is actually fixed minus the text

--- a/jessica.css
+++ b/jessica.css
@@ -43,6 +43,4 @@ body {
 }
 .heading h1 img {
     height: 3em;
-    position: absolute;
-    margin: auto;
 }
